tests/rascal/negative/type_errors/L1/14_expression_ES10_D4_87.ob
MODULE Test14;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               x := y;
               z := (+ ((z + (- z)) + (- y)));
               q := (x # (1223 MOD (1223 + (2 MOD 200))));
  (* error *)  y := y;
               p := (200 < (+ 1));
               q := q;
               r := ((200 - (200 DIV (200 * z))) <= (+ 1223));
               x := y;
               p := (2 = 0);
               r := r
END Test14.